--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -8,7 +8,7 @@
             "SourceDir": "src",
             "DistributionDir": "dist",
             "BuildCommand": "npm run-script build",
-            "StartCommand": "ng serve"
+            "StartCommand": "ionic serve"
         }
     },
     "providers": [
