Fixed everything I messed up....

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,5 @@
 {
-    "projectName": "thatsnothowyouflirt",
+    "projectName": "TNHYF",
     "version": "3.0",
     "frontend": "javascript",
     "javascript": {
